[package]
name = "circular-buffer-with-demonstrate"
version = "0.1.0"
authors = ["philip.a.markgraf <philip_markgraf@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
demonstrate = "0.4.5"

[dev-dependencies]
all_asserts = {path = "../../all_asserts"}